--- a/index.html
+++ b/index.html
@@ -2,10 +2,73 @@
 <html>
 <head>
 	<title>Basic Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	
 </head>
 <body>
-	<<h1>Test</h1>
+	<div class="wrapper">
+	<!-- Header section that contain my name and the About, Portfolio and Contact links. -->
+		<header>
+
+			<div class="name">
+				<h1>Ageel Shatry</h1>
+			</div>
+
+			<div class="links">
+				<ul>
+					<li><a href="#"> | Contact</a></li>
+					<li><a href="#"> | Portfolio  |</a></li>
+					<li><a href="#"> About  |</a></li>
+				</ul>
+			</div>
+		
+		</header>
+		<div class="clearfix"></div>
+		<div class="main-content">
+			<div class="me">
+				<h2>About Me</h2>
+				<hr>
+				<img src="http://placehold.it/200x100">
+				<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				<p>
+				<br>
+		
+				<!-- p*4>lipsum -->
+
+			</div>
+
+			<div class="social-links">
+				<h2>Connect with Me</h2>
+				<hr>
+				<a href="https://github.com/Ageel" target="_blank"><img src="assets/images/github.png"></a> 
+				<a href="https://www.linkedin.com/in/ageel-shatry/" target="_blank"><img src="assets/images/linkedin.png"></a>
+				<a href="http://stackoverflow.com/users/6174750/ageel" target="_blank"><img src="assets/images/stack.png"></a>
+			</div>
+
+		</div>
+		<div class="clearfix"></div>
+	</div>
+	<footer>
+		<div class="footer">
+			&copy Copywright 2017 Ageel Shatry
+		</div>
+	</footer>
+
+
+	
 
 </body>
 </html>
